<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/adddu"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/du"/>
        <EditText
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edt_du"/>
</LinearLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_dongy"
        android:id="@+id/btn_tongdu"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_tuchoi"
        android:id="@+id/btn_cancel"/>
</LinearLayout>